# dogl

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
apps/: README.md
assets/: example-basics.dogl  example-dmn-referenced.dogl  example-dmn.dogl  example-pools-lanes-stages.dogl  simple1.bpmn  simple1.dogl  simple2.bpmn  simple2.dogl
benches/: README.md
bindings/: README.md
contract/: README.md  tokens.md
crates/: README.md
crates/dogl-adapters/: README.md
crates/dogl-cli/: README.md
crates/dogl-editor/: README.md
crates/dogl-language/: Cargo.toml
crates/dogl-language/src/: lib.rs
crates/dogl-language/src/adapters/: bpmn_writer.rs  dogl_writer.rs  mod.rs
crates/dogl-language/src/application/: bpmn_writer.rs  dogl_writer.rs  mod.rs
crates/dogl-language/src/domain/: collab.rs  dmn.rs  element.rs  error.rs  flow.rs  layout.rs  mod.rs  pool.rs  traits.rs  value_objects.rs
crates/dogl-language/src/layout/: mod.rs
crates/dogl-language/src/resolver/: mod.rs  (+5 more)
crates/dogl-language/tests/: architecture.rs  fixture_suite.rs  proptest_validation.rs  public_api.rs
crates/dogl-render/: README.md
crates/dogl-wasm/: README.md
examples/: README.md
notation/: 01-basics.md  02-optional-codes-and-flows.md  03-expressions-and-dmn.md  04-organization-and-practices.md  DSL_syntax.md  cheat-sheet.md
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/application/: mod.rs
src/domain/: collab.rs  dogl_file.rs  element.rs  error.rs  layout.rs  mod.rs  pool.rs  traits.rs  value_objects.rs
tests/: README.md  cli_export_bpmn.rs  cli_layout.rs
(+37 files in other folders)
