[workspace]
members = ["crates/dogl-language"]
resolver = "2"

[package]
name = "dogl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dogl-language = { path = "crates/dogl-language" }

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
